deploy: 3248533b71e0094da5c1ded87eedcae576eee503

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My New Hugo Site",
-  "short_name": "My New Hugo Site",
+  "name": "Beam VR",
+  "short_name": "Beam VR",
   "start_url": "/beamvr-webpage/",
   "scope": "/beamvr-webpage/",
   "display": "standalone",
