--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Beam VR",
-  "short_name": "Beam VR",
+  "name": "Beam Vr",
+  "short_name": "Beam Vr",
   "start_url": "/beamvr-webpage/",
   "scope": "/beamvr-webpage/",
   "display": "standalone",
